# wa_audio_to_text

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  todo
