[project]
name = "wa-audio-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openai>=1.76.0",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
]
